[package]
name = "bme-penis-catcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy_rapier2d = { version = "0.13.2", features = ["simd-stable"]}
nalgebra = "0.31.0"
rand = "0.8.5"
